--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
   <body>
     <h3>Documentation</h3>
     <h4>Front Updations</h4>
-    <h4>this is important line</h4>    
+    <h4>this is important line</h4> 
+    <p>some lines ...</p>
   </body>
 </html>
