--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <h3>Documentation</h3>
     <h4>Front Updations</h4>
     <h4>this is important line</h4> 
+    <h4>this is important line</h4>    
     <p>some lines ...</p>
   </body>
 </html>
